# AT-GC

./: .gitignore  LICENSE  README.md  extra.py  genus_bio.py  genus_dict.py  model_script.py  phylum_bio.py  pyproject.toml  requirements.txt  sequences.py  test_bio.py
